--- a/frontend/src/components/templates/Header.css
+++ b/frontend/src/components/templates/Header.css
@@ -71,3 +71,11 @@ body {
       overflow: hidden;
     }
   }
+
+  .menu-text:hover {
+    color: #adadad !important;
+  }
+
+  .menu-text {
+    color: black !important;
+  }
