--- a/backend/templates/certificate-template.ejs
+++ b/backend/templates/certificate-template.ejs
@@ -12,10 +12,10 @@
     </head>
     <body>
         <div style="height: 100px; line-height: 100px; width: 85%; margin: 0 7.5%;">
-            <div style="text-align: center;">            
-                <h3><%= degree.name %></h3>
-                <div>Awarded to: <%= student.name %></div>
-            </div>
+                <div style="text-align: center; ">
+                    <h3><%= unit.name %> Microcredential Certificate</h3>
+                    <div>Awarded to: <%= student.name %></div>
+                </div>
         </div>
     </body>
 </html>
