--- a/backend/templates/degree-template.ejs
+++ b/backend/templates/degree-template.ejs
@@ -13,8 +13,8 @@
     <body>
         <div style="height: 100px; line-height: 100px; width: 85%; margin: 0 7.5%;">
             <div style="text-align: center;">            
-                <h3><%= degree.name %></h3>
-                <div>Awarded to: <%= student.name %></div>
+                <h3><%= degree.degreeName %></h3>
+                <div>Awarded to: <%= student.studentName %></div>
             </div>
         </div>
     </body>
