--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,3 +3,11 @@
     position: sticky;
     top: 0;
 }
+
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+  
+    align-items: center;
+    padding-top: 5%;
+}
